--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -46,7 +46,7 @@
 {/dede:channelartlist}
 
 
-{dede:channelartlist type='top' limit='1,1'}
+{dede:autolist type='top' partsort='2'}
 <div id="topclass2">
 <h4><a href='[field:typeurl/]'><span>[typename/]</span></a></h4>
 <ul>
@@ -57,7 +57,7 @@
 
 </ul>
 </div>
-{/dede:channelartlist}
+{/dede:autolist}
 
 
 
