--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -46,18 +46,18 @@
 {/dede:channelartlist}
 
 
-{dede:autolist type='top' partsort='2'}
+{dede:autochannel partsort='2'}
 <div id="topclass2">
-<h4><a href='[field:typeurl/]'><span>[typename/]</span></a></h4>
+<h4><a href='[field:typelink/]'><span>[typename/]</span></a></h4>
 <ul>
 
 {dede:channel type='son' noself='true'}
-<li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
+<li ><a href='[field:typelink/]'><span>[field:typename/]</span></a></li>
 {/dede:channel}
 
 </ul>
 </div>
-{/dede:autolist}
+{/dede:autochannel}
 
 
 
