--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -32,18 +32,19 @@
 <div id="topclass">
 
 
-{dede:autochannel partsort='2'}
-<div id="topclass2">
+{dede:channelartlist type='top' rows='4'}
+<div id="topclass4">
 <h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 <ul>
 
-{dede:channel type='son' noself='true'}
+{dede:channel type='son' rows='4'}
 <li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
 {/dede:channel}
 
 </ul>
 </div>
-{/dede:autochannel}
+{/dede:channelartlist}
+
 
 
 <!--
