--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -32,12 +32,14 @@
 <div id="topclass">
 
 
-{dede:channelartlist type='top' rows='4'}
+{dede:channelartlist type='top' row='4'}
 <div id="topclass4">
+{dede:type}
 <h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
+{/dede:type}
 <ul>
 
-{dede:channel type='son' rows='4'}
+{dede:channel type='son' row='4'}
 <li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
 {/dede:channel}
 
