--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -30,16 +30,14 @@
 </div>
 
 <div id="topclass">
-
-
 {dede:channelartlist type='top' row='4'}
-<div id="topclass4">
+<div>
 {dede:type}
 <h4><a href='[field:typeurl/]'><span>[field:typename/]</span></a></h4>
 {/dede:type}
 <ul>
 
-{dede:channel type='son' row='4'}
+{dede:channel type='son'}
 <li ><a href='[field:typeurl/]'><span>[field:typename/]</span></a></li>
 {/dede:channel}
 
@@ -81,3 +79,10 @@
 </div>
 -->
 </div>
+
+<script>
+objList = document.getElementById("topclass").childNodes;
+for(int i=1;i<=objList.length;i++){
+	objList[i].id = "topclass" + i;
+}
+</script>
