--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -83,6 +83,7 @@
 <script>
 objList = document.getElementById("topclass").childNodes;
 for(int i=1;i<=objList.length;i++){
+	alert(objList[i].innerHTML);
 	objList[i].id = "topclass" + i;
 }
 </script>
