--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -82,6 +82,8 @@
 
 <script>
 objList = document.getElementById("topclass").childNodes;
+alert(1);
+alert(objList.length);
 for(int i=1;i<=objList.length;i++){
 	alert(objList[i].innerHTML);
 	objList[i].id = "topclass" + i;
