--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -80,11 +80,12 @@
 -->
 </div>
 
-<script>
+<script language="javascript">
+alert(11);
 objList = document.getElementById("topclass").childNodes;
 alert(1);
 alert(objList.length);
-for(int i=1;i<=objList.length;i++){
+for(i=1;i<=objList.length;i++){
 	alert(objList[i].innerHTML);
 	objList[i].id = "topclass" + i;
 }
