--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -38,7 +38,7 @@
         {/dede:type}
         <ul>
             {dede:channel type='son'}
-            <li><span><a href='[field:typeurl/]'>[field:typename/]</a></span></li>
+            <li class="color"><a href='[field:typeurl/]'>[field:typename/]</a></li>
             {/dede:channel}
         </ul>
     </div>
