--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -33,7 +33,7 @@
               {/dede:arclist}
        
         		<ul>
-                  {dede:arclist typeid='25' titlelen=20 noflag='c' row=3}
+                  {dede:arclist typeid='25' titlelen=22 noflag='c' row=3}
                     <li>[<a href="[field:arcurl/]" target="_blank">[field:title/]</a>]</li>
                   {/dede:arclist}
                 </ul>
@@ -96,17 +96,9 @@ alimama_height=250;
   <div id="indbzrd">
     <div id="indbzrdtop">热点资讯</div>
     <ul>
-      
-            <li><span><a href="newsClassZ_12.htm">[潮男服饰]</a></span> <a href="newShow_10823.htm" title="发布时间：2012-07-04">夏季男士保养ON THE ROAD</a></li>
-            <li><span><a href="newsClassZ_11.htm">[欧美服饰]</a></span> <a href="newShow_10808.htm" title="发布时间：2012-06-27">欧美潮流夏装秀身材~没有...</a></li>
-            <li><span><a href="newsClassZ_11.htm">[欧美服饰]</a></span> <a href="newShow_10807.htm" title="发布时间：2012-06-27">Asos2012春夏新品 条纹控...</a></li>
-            <li><span><a href="newsClassZ_12.htm">[潮男服饰]</a></span> <a href="newShow_10817.htm" title="发布时间：2012-07-04">Thom Browne 2013春夏男装</a></li>
-            <li><span><a href="newsClassZ_12.htm">[潮男服饰]</a></span> <a href="newShow_10822.htm" title="发布时间：2012-07-04">风格男装：超夸张格纹套装</a></li>
-            <li><span><a href="newsClassZ_12.htm">[潮男服饰]</a></span> <a href="newShow_10820.htm" title="发布时间：2012-07-04">最新出炉的型男帅哥 值得...</a></li>
-            <li><span><a href="newsClassZ_12.htm">[潮男服饰]</a></span> <a href="newShow_10819.htm" title="发布时间：2012-07-04">牛仔多样搭配 时尚性感最...</a></li>
-            <li><span><a href="newsClassZ_12.htm">[潮男服饰]</a></span> <a href="newShow_10815.htm" title="发布时间：2012-07-04">帅哥型男清爽一夏天</a></li>
-            <li><span><a href="newsClassZ_12.htm">[潮男服饰]</a></span> <a href="newShow_10821.htm" title="发布时间：2012-07-04">优雅气场 只属于赵仁成的...</a></li>
-            <li><span><a href="newsClassZ_11.htm">[欧美服饰]</a></span> <a href="newShow_10802.htm" title="发布时间：2012-06-27">欧美潮模极简50款混搭范</a></li>
+  	{dede:arclist titlelen=24 flag='c' row=10 orderby='hot'}    
+            <li><span><a href="[field:typeurl/]">[[field:typename/]]</a></span> <a href="[field:arcurl/]" target="_blank">[field:title/]</a></li>
+	{/dede:arclist}
           </ul>
   </div>
   <div class="indadc"><script type="text/javascript">
