--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -96,7 +96,7 @@ alimama_height=250;
   <div id="indbzrd">
     <div id="indbzrdtop">热点资讯</div>
     <ul>
-  	{dede:arclist titlelen=24 flag='c' row=10 orderby='hot'}    
+  	{dede:arclist titlelen=24 row=10 orderby='hot'}    
             <li><span><a href="[field:typeurl/]">[[field:typename/]]</a></span> <a href="[field:arcurl/]" target="_blank">[field:title/]</a></li>
 	{/dede:arclist}
           </ul>
