--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -126,38 +126,9 @@ alimama_height=90;
                   <h3><a href="newShow_10823.htm"><font color="#f2650d">夏季男士保养ON THE ROAD</font></a></h3>
       <span>　 　　不论是商务出差,还是休闲旅行,作为忙碌的现代人免不了经常出行。干燥的飞机舱,不同地域的气候变化,都会导致皮肤问题。所...<a href="newShow_10823.htm"><font color="#f2650d">[详细]</font></a></span>
       <ul>
-              </ul>
-                    <li>·<a href="newShow_10822.htm">风格男装：超夸张格纹套装</a></li>
-              </ul>
-                    <li>·<a href="newShow_10821.htm">优雅气场 只属于赵仁成的男...</a></li>
-              </ul>
-                    <li>·<a href="newShow_10820.htm">最新出炉的型男帅哥 值得珍藏</a></li>
-              </ul>
-                    <li>·<a href="newShow_10819.htm">牛仔多样搭配 时尚性感最佳...</a></li>
-              </ul>
-                    <li>·<a href="newShow_10818.htm">高以翔?男人本色高清组图</a></li>
-              </ul>
-                    <li>·<a href="newShow_10817.htm">Thom Browne 2013春夏男装</a></li>
-              </ul>
-                    <li>·<a href="newShow_10816.htm">经典摩登 PRADA“漫步米兰”...</a></li>
-              </ul>
-                    <li>·<a href="newShow_10815.htm">帅哥型男清爽一夏天</a></li>
-              </ul>
-                    <li>·<a href="newShow_10814.htm">男星示范领带搭配 打造春夏V区</a></li>
-              </ul>
-                    <li>·<a href="newShow_10813.htm">伦敦男人时尚狂欢</a></li>
-              </ul>
-                    <li>·<a href="newShow_10812.htm">出游用绝对爷们儿的大尺寸旅...</a></li>
-              </ul>
-                    <li>·<a href="newShow_10811.htm">一闪街倾情父亲节,万人传动...</a></li>
-              </ul>
-                    <li>·<a href="newShow_10810.htm">佟大为获戛纳最佳着装男星</a></li>
-              </ul>
-                    <li>·<a href="newShow_10809.htm">潮人出街抢镜吸睛搭！15款搭...</a></li>
-              </ul>
-                    <li>·<a href="newShow_10808.htm">欧美潮流夏装秀身材~没有赘肉!</a></li>
-              </ul>
-                    <li>·<a href="newShow_10807.htm">Asos2012春夏新品 条纹控美衣</a></li>
+               {dede:arclist row=16 typeid='21'}   
+                    <li>·<a href='[field:arcurl/]' target='_blank'>[field:image/]</a></li>
+                {/dede:arclist}     
               </ul>
       </div>
     
