--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -127,7 +127,7 @@ alimama_height=90;
       <span>　 　　不论是商务出差,还是休闲旅行,作为忙碌的现代人免不了经常出行。干燥的飞机舱,不同地域的气候变化,都会导致皮肤问题。所...<a href="newShow_10823.htm"><font color="#f2650d">[详细]</font></a></span>
       <ul>
                {dede:arclist row=16 typeid='21'}   
-                    <li>·<a href='[field:arcurl/]' target='_blank'>[field:image/]</a></li>
+                    <li>·<a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
                 {/dede:arclist}     
               </ul>
       </div>
