--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -32,6 +32,7 @@
                                                                   location.href = "http://fuwu.taobao.com/ser/my_service.htm";
                                                               }
                                                           }
+                                                          getCookie("nick");
     </script>  欢迎来到特推广 <a href='http://www.taobao.com/' target="_blank">退出</a>
                 </p>
             </div>
