--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -144,7 +144,7 @@ PImgPlayer.init( "imgADPlayer",298,392);
     </ul>
                                             
     <ul class="mainpiclist">
-    	{dede:arclist row='5' typeid='21' imgheight='246' imgwidth='164'}   
+    	{dede:arclist row='5' typeid='21' flag='c' imgheight='246' imgwidth='164'}   
             <li><a href='[field:arcurl/]' target='_blank'>[field:image/]</a><br />
             <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
 		{/dede:arclist}     
