--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -196,7 +196,7 @@ PImgPlayer.init( "imgADPlayer",298,392);
      {/dede:arclist}    
                                             </ul>
     <ul class="mainpiclist">
-    	{dede:arclist row='5' typeid='22' imgheight='246' imgwidth='164'}   
+    	{dede:arclist row='5' typeid='22' flag='c' imgheight='246' imgwidth='164'}   
             <li><a href='[field:arcurl/]' target='_blank'>[field:image/]</a><br />
             <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
 		{/dede:arclist}     
@@ -249,7 +249,7 @@ PImgPlayer.init( "imgADPlayer",298,392);
      {/dede:arclist}     
                                             </ul>
     <ul class="mainpiclist">
-                 {dede:arclist row='5' typeid='23' imgheight='246' imgwidth='164'}   
+                 {dede:arclist row='5' typeid='23' flag='c' imgheight='246' imgwidth='164'}   
             <li><a href='[field:arcurl/]' target='_blank'>[field:image/]</a><br />
             <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
 		{/dede:arclist}   
@@ -300,7 +300,7 @@ PImgPlayer.init( "imgADPlayer",298,392);
                       
                                             </ul>
     <ul class="mainpiclist">
-               {dede:arclist row='5' typeid='24' imgheight='246' imgwidth='164'}   
+               {dede:arclist row='5' typeid='24' flag='c' imgheight='246' imgwidth='164'}   
             <li><a href='[field:arcurl/]' target='_blank'>[field:image/]</a><br />
             <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
 		{/dede:arclist}    
