--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -6,6 +6,7 @@
 <meta name="description" content="{dede:global.cfg_description/}" />
 <meta name="keywords" content="{dede:global.cfg_keywords/}" />
 <link href="/templets/taobao1/images/css.css" rel="stylesheet" type="text/css" />
+<link href="/templets/taobao1/images/dedecms.css" rel="stylesheet" type="text/css" />
 <SCRIPT language=javascript src="/templets/taobao1/js/changimages.js"></SCRIPT>
 </head>
 <body>
