--- a/Soft/dedecms/taobao1/list_article.htm
+++ b/Soft/dedecms/taobao1/list_article.htm
@@ -7,6 +7,7 @@
 <meta name="keywords" content="{dede:global.cfg_keywords/}" />
 <link href="/templets/taobao1/images/css.css" rel="stylesheet" type="text/css" />
 <link href="/templets/taobao1/images/newsClass.css" rel="stylesheet" type="text/css" />
+<link href="/templets/taobao1/images/dedecms.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
