--- a/Soft/dedecms/taobao1/list_article.htm
+++ b/Soft/dedecms/taobao1/list_article.htm
@@ -58,7 +58,14 @@ alimama_height=190;
 {/dede:list}
 </ul>
 <br clear="all" />
-<div class="gotoPage">{dede:pagelist listitem="info,index,end,pre,next,pageno,option" listsize="30"/}</div>
+<div class="gotoPage">
+
+<div class="dede_pages">
+   <ul class="pagelist">{dede:pagelist listitem="info,index,end,pre,next,pageno,option" listsize="30"/}
+</ul></div>  
+  
+   
+   </div>
 </div>
 </div>
 
