--- a/Soft/dedecms/taobao1/article_article.htm
+++ b/Soft/dedecms/taobao1/article_article.htm
@@ -56,25 +56,16 @@ alimama_height=90;
 <h3>相关文章</h3><h3>热点新闻</h3>
 <ul>
 
-<li><span>●</span> <a href="newShow_10752.htm">小资情调美鞋 纤纤玉足秀风情</a></li>
-<li><span>●</span> <a href="newShow_10751.htm">清凉一夏 糖果色包包热荐</a></li>
-<li><span>●</span> <a href="newShow_10750.htm">夏日潮妞必备 日系炫彩帆布鞋</a></li>
-<li><span>●</span> <a href="newShow_10749.htm">魅力女生美鞋 新款高跟凉鞋集亮相</a></li>
-<li><span>●</span> <a href="newShow_10748.htm">超百搭~夏日魅力大牌范美包</a></li>
-<li><span>●</span> <a href="newShow_10747.htm">学院风复古包包，甜妞们最爱哦</a></li>
-<li><span>●</span> <a href="newShow_10746.htm">韩国最潮时髦流行美鞋</a></li>
-<li><span>●</span> <a href="newShow_10745.htm">罗马坡跟厚底 夏日吸睛潮鞋15款</a></li>
+{dede:likearticle row='8' titlelen='20'}  
+<li><span>●</span> <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
+{/dede:likearticle}  
+
 </ul>
 <ul>
 
-<li><span>●</span> <a href="newShow_9629.htm">15款冬季美包 追逐时尚潮流</a></li>
-<li><span>●</span> <a href="newShow_9196.htm">复古潮包 打造迷人气质</a></li>
-<li><span>●</span> <a href="newShow_8963.htm">出色婚鞋 让你做完美新娘</a></li>
-<li><span>●</span> <a href="newShow_8713.htm">欧美潮人必备美鞋 做成熟优雅女人</a></li>
-<li><span>●</span> <a href="newShow_8711.htm">时尚单肩包 优雅知性女孩的最爱</a></li>
-<li><span>●</span> <a href="newShow_8709.htm">小资女最爱大气场美包 时尚满分</a></li>
-<li><span>●</span> <a href="newShow_7200.htm">糖果色娃娃鞋 甜美风情</a></li>
-<li><span>●</span> <a href="newShow_6973.htm">2011夏季流行凉鞋抢先播报</a></li>
+{dede:arclist row='8' titlelen='20' orderby='hot' }  
+<li><span>●</span> <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
+{/dede:arclist} 
 </ul>
 </div> 
 </div>
@@ -97,21 +88,10 @@ alimama_height=250;
 <ul>
 
 
-<li><a href="newShow_9619.htm" title="发布时间：2011-11-22  点击：20541"><img src="UpFile/20111125102416.jpg" width="115px"/></a><br /><a href="newShow_9619.htm">20款日系甜美...</a></li>
+{dede:arclist row='9' titlelen='20' imgwidth='116' imgheight='174'}  
+<li><a href='[field:arcurl/]' target='_blank'>[field:image/]</a><br /><a href="[field:arcurl/]">[field:title/]</a></li>
+{/dede:arclist}  
 
-<li><a href="newShow_9557.htm" title="发布时间：2011-11-17  点击：15046"><img src="UpFile/20111125103033.jpg" width="115px"/></a><br /><a href="newShow_9557.htm">气质美妞呛辣...</a></li>
-
-<li><a href="newShow_9556.htm" title="发布时间：2011-11-17  点击：15518"><img src="UpFile/20111125103348.jpg" width="115px"/></a><br /><a href="newShow_9556.htm">冬季连衣裙搭...</a></li>
-
-<li><a href="newShow_9555.htm" title="发布时间：2011-11-17  点击：19697"><img src="UpFile/20111125103329.jpg" width="115px"/></a><br /><a href="newShow_9555.htm">初冬性感混搭...</a></li>
-
-<li><a href="newShow_9554.htm" title="发布时间：2011-11-17  点击：19852"><img src="UpFile/20111125103601.jpg" width="115px"/></a><br /><a href="newShow_9554.htm">时尚呢子冬装...</a></li>
-
-<li><a href="newShow_9274.htm" title="发布时间：2011-10-30  点击：18700"><img src="UpFile/20111031105459.jpg" width="115px"/></a><br /><a href="newShow_9274.htm">换季不慌 最i...</a></li>
-
-<li><a href="newShow_9272.htm" title="发布时间：2011-10-30  点击：16579"><img src="UpFile/20111031105833.jpg" width="115px"/></a><br /><a href="newShow_9272.htm">松垮毛衣显瘦...</a></li>
-
-<li><a href="newShow_9271.htm" title="发布时间：2011-10-30  点击：17010"><img src="UpFile/20111031110037.jpg" width="115px"/></a><br /><a href="newShow_9271.htm">欧美风显瘦搭...</a></li>
 </ul>
 </div>
 </div>
