--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -16,12 +16,7 @@
   <div id="main1">
     <div id="indad1">
       <div id="imgADPlayer"></div>
-<script>	  
-PImgPlayer.addItem( "换季香水 巧妙叠加使用", "http://www.bkqq.com.cn/newShow_9109.htm", "adUpFile/lh/20111018105648.jpg"); 
-PImgPlayer.addItem( "香奈儿风格外套 OL专属优雅", "http://www.bkqq.com.cn/newShow_4542_1.htm", "adUpFile/lh/20110104082715.jpg"); 
-PImgPlayer.addItem( "秋冬给力潮包 小女人也有大气场", "http://www.bkqq.com.cn/newShow_9277.htm", "adUpFile/lh/20111031103329.jpg"); 
-PImgPlayer.init( "imgADPlayer",298,392);   
-</script>
+<script language="javascript" type="text/javascript" src="http://www.fenseshenghuo.com/showads/?typ=1"></script>
     </div>
     <div id="indjryw">
       <div id="indjrywtop">
