--- a/Soft/dedecms/taobao1/article_article.htm
+++ b/Soft/dedecms/taobao1/article_article.htm
@@ -56,14 +56,14 @@ alimama_height=90;
 <h3>相关文章</h3><h3>热点新闻</h3>
 <ul>
 
-{dede:likearticle row='8' titlelen='20'}  
+{dede:likearticle row='8' }  
 <li><span>●</span> <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
 {/dede:likearticle}  
 
 </ul>
 <ul>
 
-{dede:arclist row='8' titlelen='20' orderby='hot' }  
+{dede:arclist row='8'  orderby='hot' }  
 <li><span>●</span> <a href='[field:arcurl/]' target='_blank'>[field:title/]</a></li>
 {/dede:arclist} 
 </ul>
