--- a/Soft/dedecms/taobao1/article_article.htm
+++ b/Soft/dedecms/taobao1/article_article.htm
@@ -14,18 +14,8 @@
 {dede:include filename="head.htm"/}
 
 <div id="main">
-<div><script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027089";
-alimama_width=950;
-alimama_height=90;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script></div>
-<div class="indadc"><script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027108";
-alimama_width=950;
-alimama_height=90;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script></div>
+<div><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama6"></script></div>
+<div class="indadc"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama7"></script></div>
 <div class="newshow">
 <div class="newshowlj"><b>您当前的位置：</b> {dede:field name='position'/} </div>
 <div class="newshowbody">
@@ -71,12 +61,7 @@ alimama_height=90;
 </div>
 
 <div class="newshowleft">
-<div class="newshowad"><script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9010151";
-alimama_width=250;
-alimama_height=250;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script></div>
+<div class="newshowad"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama8"></script></div>
 <div class="newshowzxzx">
 <h1>热点资讯</h1>
 <ul>
@@ -96,28 +81,13 @@ alimama_height=250;
 </div>
 </div>
 
-<div class="indadc"><script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027087";
-alimama_width=950;
-alimama_height=90;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script></div>
+<div class="indadc"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama9"></script></div>
 <div class="indadc"><table width="950" border="0" align="center" cellpadding="0" cellspacing="0" style="margin-top:5px;">
   <tr>
     <td align="left">
-		<script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027111";
-alimama_width=468;
-alimama_height=60;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>	</td>
+		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama10"></script></td>
     <td align="right">
-		<script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027109";
-alimama_width=468;
-alimama_height=60;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>	</td>
+		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama11"></script>	</td>
   </tr>
 </table></div>
 
