--- a/Soft/dedecms/taobao1/list_article.htm
+++ b/Soft/dedecms/taobao1/list_article.htm
@@ -31,12 +31,7 @@
 
 
 <div class="classzleft">
-<div class="newzad"><script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027252";
-alimama_width=360;
-alimama_height=190;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script></div>
+<div class="newzad"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama12"></script></div>
 <div class="classzrdzx">
 <h1>热点资讯</h1>
 </div>
@@ -70,29 +65,14 @@ alimama_height=190;
 </div>
 
 
-<div class="indadc"><script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027087";
-alimama_width=950;
-alimama_height=90;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script></div>
+<div class="indadc"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama13"></script></div>
 
 <div class="indadc"><table width="950" border="0" align="center" cellpadding="0" cellspacing="0" style="margin-top:5px;">
   <tr>
     <td align="left">
-		<script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027111";
-alimama_width=468;
-alimama_height=60;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>	</td>
+		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama14"></script>	</td>
     <td align="right">
-		<script type="text/javascript">
-alimama_pid="mm_21154906_2327568_9027109";
-alimama_width=468;
-alimama_height=60;
-</script>
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>	</td>
+		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama15"></script>	</td>
   </tr>
 </table></div>
 
