--- a/top/DataAnalysis/YXBangTui.Web/good.html
+++ b/top/DataAnalysis/YXBangTui.Web/good.html
@@ -28,7 +28,7 @@
                         <img border="0" align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=特推广&site=cntaobao&s=1&charset=utf-8"
                             alt="有问题请点这里" /></a>
                             <p />
-         3、查看您<a href ="/UserAdsList.aspx">投放的广告</a>
+         3、查看您<a href ="/UserAdsList.aspx?istou=1">投放的广告</a>
          </div>
         </div>
     </div>
