--- a/Soft/dedecms/taobao2/head.htm
+++ b/Soft/dedecms/taobao2/head.htm
@@ -6,7 +6,7 @@
  <ul class="topmenu">
   <li class="topmenu1"><a href="/index.html">首页</a></li>
   <li class="topmenu2"><a href="http://www.go12go.com" target="_blank">导购网</a></li>
-  <li class="topmenu2"><a href="http://www.niubibang.com" target="_blank">男人邦</a></li>
+  <li class="topmenu2"><a href="http://www.fenseshenghuo.com" target="_blank">女性</a></li>
   <li class="topmenu2"><a href="http://www.hi859.com" target="_blank">房产</a></li>
   <li class="topmenu2"><a href="http://www.5izhuangxiu.com" target="_blank">家居</a></li>
   <li class="topmenu2"><a href="http://www.ianglebaby.com" target="_blank">亲子</a></li>
