--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -16,7 +16,7 @@
   <div id="main1">
     <div id="indad1">
       <div id="imgADPlayer"></div>
-<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=1"></script>
+<script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=6dad6c04-837d-4bbc-b5f6-f45e6e4e39f6"></script>
     </div>
     <div id="indjryw">
       <div id="indjrywtop">
