--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -79,9 +79,9 @@
       </div>
        </div>
     <div class="indad3">
-<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=gg1"></script></div>
+<script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=2610d762-07b9-4b99-a85a-a3d7f9fb99d5"></script></div>
     <div class="indad3">
-<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=gg2"></script></div>
+<script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=d6fd14a0-8d95-40c3-ab1b-58cb5ac6d0e9"></script></div>
     <!--div class="indad3">4</div-->
   </div>
   <div id="indad2">
