--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -86,7 +86,7 @@
   </div>
   <div id="indad2">
   
-  <script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama1"></script>
+  <script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=abfc090a-d054-423f-9f99-d9d44f488794"></script>
   
   </div>
   <div id="indbzrd">
