--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -112,7 +112,9 @@
      {/dede:channel}                                                                                                                                                                                                                          </ul>
     </div>
     <div class="mainad">
-<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=cate1"></script>
+    
+  <script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=ae6e1559-0dfd-4dbc-95a3-34329448d46e"></script>
+  
     </div>
     <div class="mainnews"> 
                {dede:arclist row=1 typeid='21'}   
@@ -150,7 +152,8 @@
   </div>
   <div class="indadc">
   
-    <script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama2"></script>
+
+  <script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=f54b30a7-52d9-4b9d-a758-958029a5d000"></script>
   
   </div>
   <div class="main3">
