--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -97,7 +97,11 @@
 	{/dede:arclist}
           </ul>
   </div>
-  <div class="indadc"></div>
+  <div class="indadc">
+  
+  <script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=ae6e1559-0dfd-4dbc-95a3-34329448d46e"></script>
+  
+  </div>
   <div class="main2">
     <div class="main2top"> 
     
